# libs-scanner

./: CMakeLists.txt  README.md  apk.cpp  apk.h  bytepattern.cpp  bytepattern.h  csvwriter.cpp  csvwriter.h  dex.cpp  dex.h  dextypes.h  directory.cpp  directory.h  disassembler.cpp  disassembler.h  keyinspector.cpp  keyinspector.h  kotlinanalyzer.cpp  kotlinanalyzer.h  kotlininspector.cpp  kotlininspector.h  kotlinwriter.cpp  kotlinwriter.h  libsinspector.cpp  libsinspector.h  libswriter.cpp  libswriter.h  main.cpp  notes.txt
axml_parser/: axml_parser.cpp  axml_parser.hpp
